# airq

./: .gitignore  Cargo.toml  README.md  airq.service  dumpXX.raw  start.sh  test5.raw
scripts/: deploy
src/: config.rs  grove_rgb_lcd.rs  main.rs  measurements.rs  observer.rs  payload.rs  reader.rs
src/config/: tests.rs
src/measurements/: tests.rs
src/observer/: tests.rs
src/payload/: tests.rs
src/reader/: tests.rs
test/: integration_test.rs
