[package]
name = "airq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0"
itertools = "0"
nom = "7"
mockall = "0"
chrono = "0.4.23"
rppal = "0.17.1"
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }
tokio-modbus = { version = "*", default-features = false, features = ["tcp-server"] }
futures = "0.3.30"
gpio-am2302-rs = { version = "1.1.0", path = "../gpio-am2302-rs" }
